chore: add garage container setup

--- a/.dev/.env.example
+++ b/.dev/.env.example
@@ -1,9 +1,8 @@
 # FOR DEVELOPMENT USE ONLY
 
-POSTGRES_DB=gofast
+POSTGRES_DB=modalrakyat
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 
 KEYCLOAK_ADMIN=admin
 KEYCLOAK_ADMIN_PASSWORD=admin
-
