--- a/config.json.example
+++ b/config.json.example
@@ -2,8 +2,16 @@
   "port": 3000,
   "isDevelopment": true,
   "shutdownTimeout": 10,
+  "secretKey": "",
   "oidc": {
     "issuer": "http://localhost:8080/realms/mirzaganteng",
-    "clientId": "access-client"
+    "clientId": "access-client",
+  },
+  "s3": {
+    "accessKeyId": "",
+    "secretAccessKey": "",
+    "defaultRegion": "garage",
+    "defaultBucket": "mirzaganteng",
+    "url": "http://localhost:3900"
   }
 }
