build: deploy garage

--- a/deploy/compose.yaml
+++ b/deploy/compose.yaml
@@ -88,3 +88,32 @@ services:
       - "traefik.http.middlewares.cors-backend-modalrakyat.headers.accessControlAllowOriginList=https://keycloak.mrz.my.id"
       - "traefik.http.middlewares.cors-backend-modalrakyat.headers.accessControlMaxAge=100"
       - "traefik.http.middlewares.cors-backend-modalrakyat.headers.addVaryHeader=true"
+
+  garage:
+    image: dxflrs/garage:v2.1.0
+    container_name: garage
+    restart: unless-stopped
+    ports:
+      - 3900:3900
+      - 3901:3901
+      - 3902:3902
+      - 3903:3903
+    volumes:
+      - ./garage.toml:/etc/garage.toml
+    networks:
+      - modalrakyat_dev_private_network
+
+  garageui:
+    image: khairul169/garage-webui:latest
+    container_name: garageui
+    restart: unless-stopped
+    volumes:
+      - ./garage.toml:/etc/garage.toml:ro
+      - ./garagedata:/tmp/data
+    ports:
+      - 3909:3909
+    environment:
+      API_BASE_URL: "http://garage:3903"
+      S3_ENDPOINT_URL: "http://garage:3900"
+    networks:
+      - modalrakyat_dev_private_network
