--- a/config.json.example
+++ b/config.json.example
@@ -2,16 +2,21 @@
   "port": 3000,
   "isDevelopment": true,
   "shutdownTimeout": 10,
-  "secretKey": "",
   "oidc": {
     "issuer": "http://localhost:8080/realms/mirzaganteng",
     "clientId": "access-client",
   },
   "s3": {
+    "url": "http://localhost:3900",
     "accessKeyId": "",
     "secretAccessKey": "",
     "defaultRegion": "garage",
-    "defaultBucket": "mirzaganteng",
-    "url": "http://localhost:3900"
+    "defaultBucket": "mirzaganteng"
+  },
+  "vault": {
+    "url": "http://localhost:3900",
+    "token": "akdjfkahfd",
+    "transitBasePath": "mirza/ganteng",
+    "TransitKey": "default"
   }
 }
